<resources>
    <string name="app_name">FindPe</string>
    <string name="createAccountText">Create An Account</string>
    <string name="JoinCommunityText">Join Our Community with any method you want</string>
    <string name="createAccText">Create New Account</string>
    <string name="agreeTermsMsgText">By clicking \&apos;Create New Account\&apos; you agree on our</string>
    <string name="tosText">Terms of Service</string>
    <string name="signGoogle">Sign in with Google</string>
    <string name="signFb">Sign in with Facebook</string>
    <string name="LoginText">Login</string>
    <string name="emailHint">Email Address</string>
    <string name="passText">Password (+8 Characters)</string>
    <string name="noAccText">Don\&apos;t have an account ? </string>
    <string name="signupText">Sign Up</string>
    <string name="createnewAccText">Create One</string>
    <string name="haveAccText">Already have an account ?</string>
    <string name="signinText">Sign In</string>
    <string name="fullName">Full Name</string>
    <string name="signoutText">Sign Out</string>
    <string name="traveling_text">Traveling</string>
    <string name="explore_text">Explore</string>
    <string name="saved_text">Saved</string>
    <string name="chat_text">Chat</string>
    <string name="profile_text">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_text">Notification</string>
    <string name="search_text">Search</string>
    <string name="trip_name">Trip Name</string>
    <string name="trip_price">$359</string>
    <string name="about_trip">ABOUT TRIP</string>
    <string name="about_trip_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Sem fringilla ut morbi tincidunt augue</string>
    <string name="degree">25°</string>
    <string name="temp_type">Sunny</string>
    <string name="trip_rate">8.4</string>
    <string name="votes">+6k</string>
    <string name="votes_text">Votes</string>
    <string name="amenities">Amenities</string>
    <string name="Wifi">WI-FI</string>
    <string name="food">Lunch</string>
    <string name="pool">Pool</string>
    <string name="drinks">Drinks</string>
    <string name="parking">Parking</string>
    <string name="nightClub">Night Club</string>
    <string name="see_timeline">Timeline</string>
    <string name="featured">Featured</string>
    <string name="num_of_trips">215</string>
    <string name="trips">Trips</string>
    <string name="filter">Filter</string>
    <string name="activities_text">Activities</string>
    <string name="nearme_text">Near Me</string>
    <string name="map_text">Map</string>
    <string name="bookings_text">Bookings</string>
    <string name="discover_text">Discover</string>
    <string name="subscription_text">Subscription</string>
    <string name="settings_text">Settings</string>
    <string name="logout_text">Logout</string>
    <string name="open_home_drawer_contentDesc">home drawer is opened</string>
    <string name="close_home_drawer_contentDesc">home drawer is closed</string>
    <string name="image_nav_header_contentDesc">this is the profile image</string>
    <string name="username_holder">Bernard Cerny</string>
    <string name="userTitle_holder">DJ/TRAVELER</string>
    <string name="edit_btn_text">Edit</string>
    <string name="time">9:00 AM</string>
    <string name="timeline_title">Breakfast</string>
    <string name="dayplans">Day Plans</string>
    <string name="nature">Nature\&apos;s Light</string>
    <string name="modern">Modern Life</string>
    <string name="cultural">Cultural</string>
    <string name="popularity">Popularity</string>
    <string name="sun_sand"><![CDATA[Sun & Sand]]></string>
    <string name="features_text">Features</string>
    <string name="price_range_text">Price Range</string>
    <string name="room_text">Room</string>
    <string name="time_period_text">Time Period</string>
    <string name="wifi_toggle_btn_text">WI-FI</string>
    <string name="hotel_toggle_btn_text">Hotel</string>
    <string name="restaurant_toggle_btn_text">Restaurant</string>
    <string name="swimming_toggle_btn_text">Swimming</string>
    <string name="pool_toggle_btn_text">Pools</string>
    <string name="parking_toggle_btn_text">Parking</string>
    <string name="spot_toggle_btn_text">Spot</string>
    <string name="inn_toggle_btn_text">Inn-Bar</string>
    <string name="slider_desc">this price range</string>
    <string name="price_range_start">0</string>
    <string name="price_range_end">5K</string>
    <string name="from_text">From :</string>
    <string name="to_text">To :</string>
    <string name="data_placeholder_text">T</string>
    <string name="number_placeholder_text">25</string>
    <string name="day_circle_contentDESC">this is the day circle</string>
    <string name="see_all">See All</string>
    <string name="places_to_visit">Places to Visit</string>
    <string name="login_with_pe_text">Sign in with PE Account</string>
    <string name="summary">Summary</string>
    <string name="adult">Adult</string>
    <string name="kid">Kid</string>
    <string name="adult_cost">240</string>
    <string name="total_price">Total Price</string>
    <string name="total_cost">760</string>
    <string name="le">LE</string>
    <string name="x">X</string>
    <string name="adult_no">2</string>
    <string name="payment_method">Payment Method</string>
    <string name="saved_cards">Saved Cards</string>
    <string name="add_card">Add card</string>
    <string name="pay_with_fawry">Pay with fawry</string>
    <string name="proceed_with_fawry">Proceed with fawry</string>
    <string name="no_internet_string">No internet found. Check your connection and try again</string>
    <string name="try_again">Try again</string>
    <string name="num_of_seats">Number of seats:</string>
    <string name="trip_durations">Trip available durations :</string>
    <string name="proceed_to_checkout">Proceed to checkout</string>
    <string name="num_of_seats_placeholder">12</string>
    <string name="booking_date_placeholder">22/10/2021</string>
    <string name="facebook_app_id">789196238695588</string>
    <string name="fb_login_protocol_scheme">fb789196238695588</string>
    <string name="msg_placeholder">Hi there this is a very long msg to test the textView that will show it so the rest of this msg is copied and redundant No internet found. Check your connection and try again </string>
    <string name="username_placeholder">Shady Ahmed AbdUllah El-Sayed</string>
    <string name="userImg_desc">this is the user image</string>
    <string name="time_placeholder">15/9/2020</string>
    <string name="no_chats_text">There\&apos;s no available chats. Choose a companion and start chatting</string>
    <string name="no_chats_img_desc">there is no available chats</string>
    <string name="no_chats_problem">"We are facing problem with chats please try again later"</string>
    <string name="msg_hint">Type a message.....</string>
    <string name="send_msg_desc">this is send msg button</string>
    <string name="back_btn_desc">this is the Chat page back button</string>
    <string name="trip_destination_name_placeholder">Dahab</string>
    <string name="trip_price_placeholder">$967</string>
    <string name="temperature_placeholder">26 ℃</string>
    <string name="weather_placeholder">Sunny</string>
    <string name="num_of_likes_placeholder">4.1K</string>
    <string name="num_of_comments_placeholder">766</string>
    <string name="trip_img_desc">this is the trip image</string>
    <string name="trip_item_menu_desc">this is the menu dots</string>
    <string name="weather_state_desc">this is the weather state</string>
    <string name="love_trip_desc">this is the love image</string>
    <string name="comment_img_desc">this is the comment image</string>
    <string name="alexandria">Alexandria</string>
    <string name="no_connection_img_desc">this is no Connection</string>
    <string name="error_img_desc">this is an error occurred</string>
    <string name="no_msg">there is no available messages</string>
    <string name="no_trips_text">there is no available Trips</string>
    <string name="timeline_empty_list_text">No timeline available</string>
    <string name="price_format">%s EGP</string>
    <string name="all_trips">All Trips</string>
    <string name="available">Available Now</string>
    <string name="companion">Companion</string>
    <string name="trip_history">Trip History</string>
    <string name="cities_placeholder">Dahab ,Cairo ,Alexandria ,Jordan</string>
    <string name="user_info_img_desc">this is the user info image</string>
    <string name="image_gallery_desc">this is one of the user gallery images</string>
    <string name="is_verified_desc">this user is verified</string>
    <string name="user_level_desc">this is the user level</string>
    <string name="find_companion">Find Companion</string>
    <string name="i_want_a_companion">I want a companion</string>
    <string name="have_a_custom">Have a custom job ? Post here</string>
    <string name="join_us">Join Us</string>
    <string name="apply_companion">apply as companion</string>
    <string name="our_policies">Our Policies</string>
    <string name="companion_list">Companions</string>
    <string name="registration">Registration</string>
    <string name="companion_image_desc">this is the companion image</string>
    <string name="experty_level">Experience level :</string>
    <string name="bio">Bio :</string>
    <string name="expert_level_placeholder">Professional companion</string>
    <string name="bio_placeholder">orem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="registeration_form_title">Let\'s start with upgrading your account to companion</string>
    <string name="email_address">Email Address</string>
    <string name="country">Country</string>
    <string name="phone_number">Phone Number</string>
    <string name="city">City</string>
    <string name="registration_terms">By proceeding I agree to Findpe\'s Terms of service and acknowledge that I have read the privacy policy</string>
    <string name="welcome">"Welcome, "</string>
    <string name="name">Name</string>
    <string name="get_started_subtitle">Choose what describe you better</string>
    <string name="professional">Professional</string>
    <string name="get_started">Get started</string>
    <string name="professional_desc">Tour guide certification or worked as tour guide before</string>
    <string name="amatuer">Amateur</string>
    <string name="amatuer_desc">Want to help people enjoy their trips to the max and earn some money</string>
    <string name="proceed">Proceed</string>
    <string name="from_hint">From…</string>
    <string name="to_hint">Where to ?</string>
    <string name="category_empty_list">No trips available</string>
    <string name="empty_duration">No duration available</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Id aliquet risus feugiat in. Massa enim nec dui nunc mattis enim ut tellus elementum</string>
    <string name="job_cost">0.0 EGP</string>
    <string name="offered_amount">"Offered Amount EGP : "</string>
    <string name="request_text">Requests</string>
    <string name="job_details">Job Details</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="job_offers">Job Offers</string>
    <string name="proposal_text">Proposal</string>
    <string name="bid_details">Bid Details</string>
</resources>