<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/home_drawer_group_companion"
        android:checkableBehavior="single"
        android:visible="false">

        <item
            android:id="@+id/RequestsFragmentHome"
            android:icon="@drawable/ic_outline_local_activity_24"
            android:title="@string/request_text" />
    </group>
    <group
        android:id="@+id/home_drawer_group_3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/jobsFragmentHome"
            android:icon="@drawable/ic_outline_explore_24"
            android:title="@string/job_offers" />
        <item
            android:id="@+id/nearmeFragmentHome"
            android:icon="@drawable/ic_outline_near_me_24"
            android:title="@string/nearme_text" />

        <item
            android:id="@+id/mapFragmentHome"
            android:icon="@drawable/ic_outline_map_24"
            android:title="@string/map_text" />
        <item
            android:id="@+id/bookingsFragmentHome"
            android:icon="@drawable/ic_outline_bookmark_add_24"
            android:title="@string/bookings_text" />
        <item
            android:id="@+id/subscriptionFragmentHome"
            android:icon="@drawable/ic_baseline_add_circle_24"
            android:title="@string/subscription_text" />
    </group>
    <group
        android:id="@+id/home_drawer_group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/settingsFragmentHome"
            android:icon="@drawable/ic_outline_settings_24"
            android:title="@string/settings_text" />
        <item
            android:id="@+id/logoutFragmentHome"
            android:icon="@drawable/ic_baseline_power_settings_new_24"
            android:title="@string/logout_text" />
    </group>


</menu>