<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/travelingFragmentHome"
        android:checkable="false"
        android:enabled="true"
        android:title="@string/traveling_text"
        android:visible="true" />
    <item
        android:id="@+id/exploreFragmentHome"
        android:enabled="true"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/explore_text"
        android:visible="true" />
    <item
        android:id="@+id/savedFragmentHome"
        android:enabled="true"
        android:title="@string/saved_text"
        android:visible="true" />
    <item
        android:id="@+id/chatFragmentHome"
        android:enabled="true"
        android:title="@string/chat_text"
        android:visible="true" />
    <item
        android:id="@+id/profileFragmentHome"
        android:enabled="true"
        android:title="@string/profile_text"
        android:visible="true" />
</menu>