<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/requests_nav_graph"
    app:startDestination="@id/requestsFragmentHome">

    <fragment
        android:id="@+id/requestsFragmentHome"
        android:name="com.iti.example.findpe2.home.jobrequests.views.RequestsFragmentHome"
        android:label="@string/request_text">
        <action
            android:id="@+id/action_requestsFragmentHome_to_jobDetailFragment"
            app:destination="@id/jobDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/jobDetailFragment"
        android:name="com.iti.example.findpe2.jobHolder.jobdetails.views.JobDetailFragment"
        android:label="@string/job_details">
        <argument
            android:name="request"
            app:argType="com.iti.example.findpe2.pojos.ReceivedJobRequest"
            app:nullable="true" />
        <argument
            android:name="job"
            app:argType="com.iti.example.findpe2.pojos.Job"
            app:nullable="true" />
        <action
            android:id="@+id/action_jobDetailFragment_to_previewClientProfileFragment"
            app:destination="@id/previewClientProfileFragment" />
    </fragment>
    <fragment
        android:id="@+id/previewClientProfileFragment"
        android:name="com.iti.example.findpe2.home.previewClient.views.PreviewClientProfileFragment"
        android:label="@string/profile_text">
        <argument
            android:name="clientID"
            app:argType="string" />
    </fragment>
</navigation>